Forum text out of bounds Fix #272

--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -629,6 +629,10 @@ hr {
         border: 1px solid black;
 }
 
+.ThreadTable td {
+  word-break: break-all;
+}
+
 /* ///////////\/\\\\\\\\\\\
    //  Znote YOUTUBE BB  \\
    ///////////\/\\\\\\\\\\\ */
